 - Added new stream trace visualization method for Bats2d objects: add_stream_scatter
 - Bats2d.add_b_magsphere and add_stream_scatter now have kwargs for adding arrows on ray traces
 - Updates to ram.RamSat including omnidirectional flux calculation
 - ram.PressureFile fixed for Python 3.x failures
 - rim.Iono objects now load poorly-formatted files; rim.fix_format deprecated
toolbox
 - New function get_url to retrieve data from a URL
 - Change update to retrieve OMNI2 data from SPDF not ViRBO
 - Change update to supplement ViRBO Qin-Denton files with NMC daily files
 - Change update to get leapseconds from NASA MODIS instead of USNO
 - New functions quaternionFromMatrix/quaternionToMatrix to convert between
   quaternions and 3D rotation matrices.

Changes in Version 0.2.1 (2019-10-02)
=====================================
datamodel
 - Allow access to attributes via "meta" property
irbempy
 - Fix compilation issues on certain systems
poppy
 - Fix bootstrapping when aggregating function has multiple outputs
pycdf
 - Allow access to attributes via "meta" property
 - Single element references now return Python types not numpy scalars
 - Fix type-guessing on numpy object arrays with no values
 - New "istp" module supporting CDFs with ISTP-compliant metadata

Changes in Version 0.2.0 (2019-06-22)
=====================================
- Many installer updates, including binary wheels for Windows
- Fix writing of configuration file on Windows
ae9ap9
 - Fix handling of gzipped files under Windows/Python2
datamodel
 - Datatypes are now explicitly preserved by function "toRecArray"
irbempy
 - Update IRBEMlib to rev616
 - Update build for compatibility with numpy>=1.16 and GCC 8
 - Update retrieval of TS07 dynamic coefficient files
pybats
 - Many small changes and bugfixes (thanks John Haiducek)
 - Fix handling of gzipped files under Windows/Python2
pycdf
 - Proper handling of type guessing for negative integers, numpy scalars, and
   object arrays.